# clion_stm32_boilerplate

./: .gitignore  .gitmodules  .vim  CMakeLists.txt  README.md
cmake/: compiler.cmake  devices.cmake  freertos.cmake  libopencm3.cmake  toolchain.cmake
ld/stm32/: stm32f103c8t6.ld  stm32f407vet6.ld
scripts/: dummy_cmake_launch
workspace/: CMakeLists.txt
workspace/_rtos-config/: _FreeRTOSConfig.h  config.cmake
workspace/_rtos-config/incl-template/: FreeRTOSConfig.h  system_stm32xx.h
workspace/miniblink/: CMakeLists.txt
workspace/miniblink/src/: main.c
workspace/miniblink/src/tasks/: blink.c  blink.h
workspace/uart/: CMakeLists.txt
workspace/uart/src/: main.c  main.cpp
workspace/usbcdcdemo/: CMakeLists.txt
workspace/usbcdcdemo/src/: main.c
workspace/usbcdcdemo/src/usb/: usbdc.h  usbdcd.c
